# xarm_hand_control

./: .env.default  .gitignore  Makefile  README.md  USAGE.md  requirements.txt  setup.cfg
portable/: .env.default  README.md  main.py
portable/modules/: model.py  utils.py
src/: .env.default  .env.default_portable  Makefile  classes.json  main.py  main_processing.py  main_processing_pyrs.py  main_training.py  random_forest.py  utils.py
src/modules/: utils.py
src/modules/processing/: process.py
src/modules/training/: acquire.py  data.py  export.py  model.py  split_dataset.py  train.py  train_random_forest.py
src/training/: __main__.py  acquire.py  data.py  export.py  main.py  model.py  split_dataset.py  train.py  user_transforms.py
src/xarm_hand_control/: __init__.py  __main__.py  main.py
src/xarm_hand_control/modules/: utils.py
src/xarm_hand_control/modules/processing/: process.py
src/xarm_hand_control/modules/training/: acquire.py  data.py  export.py  train.py  train_random_forest.py
