[metadata]
name = xarm_hand_control
version = 1.0.0
author = Dimitri VINET
author_email = dimitri.vinet@outlook.com
description = xArm6 control with hand movements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dimitrivinet/xarm_hand_control
project_urls =
    Bug Tracker = https://github.com/dimitrivinet/xarm_hand_control/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
dependency_links = https://download.pytorch.org/whl/torch_stable.html
install_requires =
    opencv_contrib_python==4.5.3.56
    torch==1.9.0+cpu
    joblib==1.0.1
    onnxruntime==1.8.1
    mediapipe==0.8.6.2
    tqdm==4.62.0
    scikit_learn==0.24.2

[options.packages.find]
where = src
